cf_analysis_results/checkerframework_3.42.0_results/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8.txt
warning: (annotation.not.completed) $$ 2 $$ com.google.common.collect $$ @ParametersAreNonnullByDefault $$  $$ Element com.google.common.collect contains annotation @ParametersAreNonnullByDefault which can't be found. Make sure your classpath is set correctly.
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:44: error: (required.method.not.called) $$ 4 $$ method close $$ new UnsafeBasedOutputStream(UNSAFE, allocatedAddress, allocationSize) $$ com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedOutputStream $$ possible exceptional exit due to throw new IllegalStateException(e); with exception type java.lang.IllegalStateException $$ ( 1945, 2035 ) $$ @MustCall method close may not have been invoked on new UnsafeBasedOutputStream(UNSAFE, allocatedAddress, allocationSize) or any of its aliases.
				new UnsafeBasedOutputStream(
				^
  The type of object is: com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedOutputStream.
  Reason for going out of scope: possible exceptional exit due to throw new IllegalStateException(e); with exception type java.lang.IllegalStateException
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:50: error: (required.method.not.called) $$ 4 $$ method close $$ new UnsafeBasedInputStream(UNSAFE, allocatedAddress, allocationSize) $$ com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedInputStream $$ possible exceptional exit due to new ObjectInputStream(unsafeBasedInputStream) with exception type java.io.IOException $$ ( 2128, 2217 ) $$ @MustCall method close may not have been invoked on new UnsafeBasedInputStream(UNSAFE, allocatedAddress, allocationSize) or any of its aliases.
				new UnsafeBasedInputStream(
				^
  The type of object is: com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedInputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(unsafeBasedInputStream) with exception type java.io.IOException
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/memorymappedfile/MemoryMappedFileBasedOffHeapBenchmarkWorker.java:26: error: (required.method.not.called) $$ 4 $$ method close $$ new RandomAccessFile(new File("OffHeapBenchmarkTrade.bin"), "rw") $$ java.io.RandomAccessFile $$ possible exceptional exit due to fc.map(FileChannel.MapMode.READ_WRITE, 0, size) with exception type java.io.IOException $$ ( 780, 851 ) $$ @MustCall method close may not have been invoked on new RandomAccessFile(new File("OffHeapBenchmarkTrade.bin"), "rw") or any of its aliases.
				new RandomAccessFile(
				^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope: possible exceptional exit due to fc.map(FileChannel.MapMode.READ_WRITE, 0, size) with exception type java.io.IOException
3 errors
1 warning
